--- a/views/index.jade
+++ b/views/index.jade
@@ -1,13 +1,7 @@
 extends layout
 
 block body
+  include partials/nav
   div(ng-controller='AppCtrl')
-    h2 Hello {{name}}
-    ul.menu
-      li
-        a(href='view1') view1
-      li
-        a(href='view2') view2
-
     div(ng-view)
 
