--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,5 +15,8 @@ html(ng-app="myApp")
   script(src='js/controllers.js')
   script(src='js/filters.js')
   script(src='js/directives.js')
+  script(src='js/controllers/homeController.js')
+  script(src='js/controllers/authController.js')
+  script(src='js/controllers/todoController.js')
   script(src='bower_components/jquery/dist/jquery.min.js')
   script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')
