--- a/views/partials/todo.jade
+++ b/views/partials/todo.jade
@@ -5,17 +5,17 @@ h1 My Todos
     input(type='hidden', name='db_id')
     .form-group
       label Title:
-      input#todoTitle(type='text', name='title')
+      input#todoTitle(type='text', name='title', ng-model='task.title')
     .form-group
       label Description:
-      textarea#todoDescription(name='description')
+      textarea#todoDescription(name='description', ng-model='task.description')
     .form-group
       label Priority:
-      input#todoPriority(type='text', name='priority')
+      input#todoPriority(type='text', name='priority', ng-model='task.priority')
     .form-group
       label Complete by:
-      input#todoDuedate(type='text', name='due_date', )
+      input#todoDuedate(type='text', name='due_date', ng-model='task.due_date')
     .form-group
       label Completed:
-      input#todoDone(type='checkbox', name='complete')
+      input#todoDone(type='checkbox', name='complete', ng-model='task.complete')
     button.btn.btn-success.btn-large(ng-click='submit()') Add Todo
