--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,8 @@ html(ng-app="myApp")
     block body
 
   script(src='js/lib/angular/angular.js')
+  script(src='bower_components/jquery/dist/jquery.min.js')
+  script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
@@ -18,5 +20,4 @@ html(ng-app="myApp")
   script(src='js/controllers/homeController.js')
   script(src='js/controllers/authController.js')
   script(src='js/controllers/todoController.js')
-  script(src='bower_components/jquery/dist/jquery.min.js')
-  script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')
+  script(src='js/controllers/navController.js')
