--- a/views/partials/authenticate.jade
+++ b/views/partials/authenticate.jade
@@ -32,9 +32,9 @@
         form(role='form', novalidate, name='userForm')
           .form-group
             label(for='username') username
-            input.form-control#username(type='text', name='username', ng-model='user.username', autofocus, required)
+            input.form-control#username(type='text', name='username', ng-model='user.username', autofocus, required, ng-minlength='3')
           .form-group
             label(for='password') Password
-            input.form-control#password(type='password', name='password', ng-model='user.password', required)
-          button.btn.btn-danger(ng-click='register()') Register
+            input.form-control#password(type='password', name='password', ng-model='user.password', required, ng-minlength='3')
+          button.btn.btn-danger(ng-click='register()', ng-show='userForm.$valid') Register
   .col-xs-4
