--- a/views/partials/nav.jade
+++ b/views/partials/nav.jade
@@ -7,6 +7,6 @@ nav.navbar.navbar-default(ng-controller='navController')
         a(href='/authenticate') Register/Log In 
     ul.nav.navbar-nav.navbar-right(ng-show='rootUser')
       li 
-        a(href='/todo') Todos
+        a(href='/list') Todos
       li
         a.button.btn.btn-success(ng-click='logout()') x {{rootUser}}
