working on task list page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,3 +21,4 @@ html(ng-app="myApp")
   script(src='js/controllers/authController.js')
   script(src='js/controllers/todoController.js')
   script(src='js/controllers/navController.js')
+  script(src='js/controllers/listController.js')
