working on edit task function

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,3 +22,4 @@ html(ng-app="myApp")
   script(src='js/controllers/todoController.js')
   script(src='js/controllers/navController.js')
   script(src='js/controllers/listController.js')
+  script(src='js/controllers/editController.js')
